Drop notebook-as-pdf

--- a/datascience/Dockerfile
+++ b/datascience/Dockerfile
@@ -6,7 +6,7 @@ RUN pip install jupytext
 
 # Upgrade infra components
 COPY infra-requirements.txt /tmp/infra-requirements.txt
-RUN pip install -r /tmp/infra-requirements.txt
+RUN pip install -r --no-cache /tmp/infra-requirements.txt
 
 # Ottr grader.
 RUN Rscript -e "devtools::install_github('ucbds-infra/ottr', ref='0.0.1', upgrade_dependencies=FALSE, quiet=FALSE)"
