--- a/r-minimal-python/requirements.txt
+++ b/r-minimal-python/requirements.txt
@@ -2,7 +2,7 @@
 # data8; foundation
 datascience==0.15.6
 matplotlib==3.1.3
-pandas==1.1.0
+pandas==1.2.2
 scipy==1.5.2
 statsmodels==0.11.1
 okpy==1.18.1
@@ -26,3 +26,6 @@ sympy==1.6.2
 
 # issue #929, SW 282 - fall 2019
 pyreadstat==1.0.0
+
+# For Pandas
+openpyxl==3.0.6
