--- a/deepnote-2021/Dockerfile
+++ b/deepnote-2021/Dockerfile
@@ -1,4 +1,4 @@
 FROM deepnote/python:3.8
 
 RUN pip install okpy
-RUN pip install scipy pandas matplotlib statsmodels xlrd openpyxl
+RUN pip install statsmodels openpyxl
